# enigma2-plugins

./: Makefile.am  README.md  configure.ac
autotimer/src/: AutoTimerList.py
dreamexplorer/src/: myFileList.py
epgsearch/src/: EPGSearch.py
merlinmusicplayer/src/: plugin.py
weatherplugin/src/: plugin.py  setup.py
